--- a/app-games/src/main/res/values-ja-rJP/strings.xml
+++ b/app-games/src/main/res/values-ja-rJP/strings.xml
@@ -5,10 +5,6 @@
   <string name="games">ゲーム</string>
   <string name="categories">カテゴリー</string>
   <string name="search">検索</string>
-  <!-- Common -->
-  <string name="send_button">送信</string>
-  <string name="try_again">再試行してください。</string>
-  <string name="please_wait">しばらくお待ちください</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">設定</string>
   <string name="overflow_menu_terms_conditions">利用条件</string>
@@ -79,12 +75,18 @@
   <string name="button_back_title">戻る</string>
   <string name="button_see_all_title">すべて表示</string>
   <string name="editorials_view_no_content_message">ここにはまだコンテンツがありません。</string>
+  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
   <string name="button_update_title">更新する</string>
   <string name="button_open_app_title">開く</string>
   <string name="install_waiting_download_message">ダウンロード待ち</string>
   <string name="downloading_percentage_body">%2$sの%1$s%%</string>
   <string name="install_downloading_message">ダウンロード中</string>
   <!-- Common -->
+  <string name="send_button">送信</string>
+  <string name="try_again">再試行してください。</string>
+  <string name="please_wait">しばらくお待ちください</string>
+  <string name="ok_button">Ok</string>
+  <string name="cancel_button">Cancel</string>
   <string name="download_now_button">今すぐダウンロード</string>
   <string name="uninstall_button">アンインストール</string>
   <string name="go_back_button">戻る</string>
@@ -94,6 +96,7 @@
   <string name="waiting_for_connection">接続待ち</string>
   <string name="wait_for_wifi_button">Wi-Fi接続待ち</string>
   <string name="continue_button">続ける</string>
+  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">空き容量不足</string>
   <string name="out_of_space_body">インストールを続行するには %s 必要です。</string>
@@ -187,4 +190,9 @@
   <string name="purchase_error_expired_card_title">カードの有効期限が切れているようです。</string>
   <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
   <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <!-- Bonus Page -->
+  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
+  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
+  <string name="bonus_page_title_2">Want More?</string>
+  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
 </resources>
