--- a/app-games/src/main/res/values-fr-rFR/strings.xml
+++ b/app-games/src/main/res/values-fr-rFR/strings.xml
@@ -5,10 +5,6 @@
   <string name="games">Jeux</string>
   <string name="categories">Catégories</string>
   <string name="search">Recherche</string>
-  <!-- Common -->
-  <string name="send_button">Envoyer</string>
-  <string name="try_again">Merci de réessayer.</string>
-  <string name="please_wait">Veuillez patienter.</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">Paramètres</string>
   <string name="overflow_menu_terms_conditions">Termes &amp;et Conditions</string>
@@ -79,12 +75,18 @@
   <string name="button_back_title">Retour</string>
   <string name="button_see_all_title">Voir tout</string>
   <string name="editorials_view_no_content_message">Oups, il n\'y a pas encore de contenu ici !</string>
+  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
   <string name="button_update_title">Mettre à jour</string>
   <string name="button_open_app_title">Ouvrir</string>
   <string name="install_waiting_download_message">En attente de téléchargement</string>
   <string name="downloading_percentage_body">%1$s%% de %2$s</string>
   <string name="install_downloading_message">Téléchargement</string>
   <!-- Common -->
+  <string name="send_button">Envoyer</string>
+  <string name="try_again">Merci de réessayer.</string>
+  <string name="please_wait">Veuillez patienter.</string>
+  <string name="ok_button">Ok</string>
+  <string name="cancel_button">Cancel</string>
   <string name="download_now_button">Téléchargez maintenant</string>
   <string name="uninstall_button">Désinstaller</string>
   <string name="go_back_button">Retour Arrière</string>
@@ -94,6 +96,7 @@
   <string name="waiting_for_connection">En attente de connexion</string>
   <string name="wait_for_wifi_button">En attente de Wi-Fi</string>
   <string name="continue_button">Continuer</string>
+  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Espace insuffisant</string>
   <string name="out_of_space_body">Vous avez besoin de %s pour continuer l\'installation.</string>
@@ -186,4 +189,9 @@
   <string name="purchase_error_expired_card_title">Il semble que votre carte soit expirée.</string>
   <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
   <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <!-- Bonus Page -->
+  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
+  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
+  <string name="bonus_page_title_2">Want More?</string>
+  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
 </resources>
