--- a/app-games/src/main/res/values-it-rIT/strings.xml
+++ b/app-games/src/main/res/values-it-rIT/strings.xml
@@ -5,10 +5,6 @@
   <string name="games">Giochi</string>
   <string name="categories">Categorie</string>
   <string name="search">Cerca</string>
-  <!-- Common -->
-  <string name="send_button">Invia</string>
-  <string name="try_again">Ritenta.</string>
-  <string name="please_wait">Attendere prego.</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">Impostazioni</string>
   <string name="overflow_menu_terms_conditions">Termini e condizioni</string>
@@ -79,12 +75,18 @@
   <string name="button_back_title">Indietro</string>
   <string name="button_see_all_title">Vedi tutto</string>
   <string name="editorials_view_no_content_message">Non ci sono ancora contenuti al momento!</string>
+  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
   <string name="button_update_title">Aggiorna</string>
   <string name="button_open_app_title">Apri</string>
   <string name="install_waiting_download_message">In attesa del download</string>
   <string name="downloading_percentage_body">%1$s%% di %2$s</string>
   <string name="install_downloading_message">Download in corso</string>
   <!-- Common -->
+  <string name="send_button">Invia</string>
+  <string name="try_again">Ritenta.</string>
+  <string name="please_wait">Attendere prego.</string>
+  <string name="ok_button">Ok</string>
+  <string name="cancel_button">Cancel</string>
   <string name="download_now_button">Scaricalo adesso</string>
   <string name="uninstall_button">Disinstalla</string>
   <string name="go_back_button">Indietro</string>
@@ -94,6 +96,7 @@
   <string name="waiting_for_connection">In attesa di connessione</string>
   <string name="wait_for_wifi_button">In attesa di Wi-Fi</string>
   <string name="continue_button">Continua</string>
+  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Spazio esaurito</string>
   <string name="out_of_space_body">Spazio necessario per procedere con l\'installazione: %s.</string>
@@ -186,4 +189,9 @@
   <string name="purchase_error_expired_card_title">La tua carta è scaduta.</string>
   <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
   <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <!-- Bonus Page -->
+  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
+  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
+  <string name="bonus_page_title_2">Want More?</string>
+  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
 </resources>
