--- a/app-games/src/main/res/values-pa-rIN/strings.xml
+++ b/app-games/src/main/res/values-pa-rIN/strings.xml
@@ -6,10 +6,6 @@
   <string name="categories">ਵਰਗ</string>
   <string name="search">ਗਲੋਬਲ ਖੋਜ
 ਇੱਕ ਖੋਜੀ ਜਾ ਸੱਕਣ ਵਾਲੀ ਆਈਟਮ ਦੇ ਤੌਰ ਤੇ ਵਰਤਣ ਲਈ ਲੇਬਲ</string>
-  <!-- Common -->
-  <string name="send_button">ਭੇਜੋ</string>
-  <string name="try_again">Please try again.</string>
-  <string name="please_wait">Please wait.</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">ਸੈਟਿੰਗ</string>
   <string name="overflow_menu_terms_conditions">Terms &amp; Conditions</string>
@@ -81,12 +77,18 @@
   <string name="button_back_title">ਵਾਪਸ</string>
   <string name="button_see_all_title">ਸਾਰਾ ਦੇਖੋ</string>
   <string name="editorials_view_no_content_message">Oops, there\'s no content here yet!</string>
+  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
   <string name="button_update_title">ਅੱਪਡੇਟ</string>
   <string name="button_open_app_title">ਖੋਲੋ</string>
   <string name="install_waiting_download_message">Waiting for download</string>
   <string name="downloading_percentage_body">%1$s%% of %2$s</string>
   <string name="install_downloading_message">ਡਾਊਨਲੋਡ ਹੋ ਰਿਹਾ ਹੈ</string>
   <!-- Common -->
+  <string name="send_button">ਭੇਜੋ</string>
+  <string name="try_again">Please try again.</string>
+  <string name="please_wait">Please wait.</string>
+  <string name="ok_button">Ok</string>
+  <string name="cancel_button">Cancel</string>
   <string name="download_now_button">Download Now</string>
   <string name="uninstall_button">ਅਨਇੰਸਟਾਲ</string>
   <string name="go_back_button">Go Back</string>
@@ -96,6 +98,7 @@
   <string name="waiting_for_connection">Waiting for connection</string>
   <string name="wait_for_wifi_button">Wait for Wi-Fi</string>
   <string name="continue_button">ਜਾਰੀ ਰੱਖੋ</string>
+  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Out of Space</string>
   <string name="out_of_space_body">ਇੰਸਟਾਲੇਸ਼ਨ ਨੂੰ ਜਾਰੀ ਰੱਖਣ ਲਈ ਤੁਹਾਨੂੰ %s ਦੀ ਲੋੜ ਹੈ|</string>
@@ -188,4 +191,9 @@
   <string name="purchase_error_expired_card_title">It seems your card is expired.</string>
   <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
   <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <!-- Bonus Page -->
+  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
+  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
+  <string name="bonus_page_title_2">Want More?</string>
+  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
 </resources>
