--- a/app-games/src/main/res/values-uk-rUA/strings.xml
+++ b/app-games/src/main/res/values-uk-rUA/strings.xml
@@ -5,10 +5,6 @@
   <string name="games">Ігри</string>
   <string name="categories">Категорії</string>
   <string name="search">Шукати</string>
-  <!-- Common -->
-  <string name="send_button">Надіслати кошти</string>
-  <string name="try_again">Будь ласка, спробуйте ще раз.</string>
-  <string name="please_wait">Будь ласка, зачекайте.</string>
   <!-- Settings -->
   <string name="overflow_menu_settings">Налаштування</string>
   <string name="overflow_menu_terms_conditions">Умови та положення</string>
@@ -79,12 +75,18 @@
   <string name="button_back_title">Назад</string>
   <string name="button_see_all_title">Побачити всі</string>
   <string name="editorials_view_no_content_message">Ой, тут ще нічого немає!</string>
+  <string name="error_no_content_body">Oops, we couldn\'t find related content yet!</string>
   <string name="button_update_title">Оновити</string>
   <string name="button_open_app_title">Відкрити</string>
   <string name="install_waiting_download_message">Очікує на завантаження</string>
   <string name="downloading_percentage_body">%1$s%% з %2$s</string>
   <string name="install_downloading_message">Завантаження</string>
   <!-- Common -->
+  <string name="send_button">Надіслати кошти</string>
+  <string name="try_again">Будь ласка, спробуйте ще раз.</string>
+  <string name="please_wait">Будь ласка, зачекайте.</string>
+  <string name="ok_button">Ok</string>
+  <string name="cancel_button">Cancel</string>
   <string name="download_now_button">Завантажити зараз</string>
   <string name="uninstall_button">Видалити</string>
   <string name="go_back_button">Повернутися</string>
@@ -94,6 +96,7 @@
   <string name="waiting_for_connection">Очікування з\'єднання</string>
   <string name="wait_for_wifi_button">Зачекати Wi-Fi</string>
   <string name="continue_button">Продовжити</string>
+  <string name="error_install_permissions_body">For your security, your phone currently isn\'t allowed to install apps from this source. You can change this in Settings.</string>
   <!-- Out of Space -->
   <string name="out_of_space_title">Немає вільного місця</string>
   <string name="out_of_space_body">Вам потрібно %s, щоб продовжити встановлення.</string>
@@ -186,4 +189,9 @@
   <string name="purchase_error_expired_card_title">Схоже, термін дії вашої картки закінчився.</string>
   <string name="iap_already_processing_title">It seems this purchase is already being processed.</string>
   <string name="iap_already_processing_body">This purchase may take a while, so, please hold on until completed or contact our Support Team.</string>
+  <!-- Bonus Page -->
+  <string name="bonus_page_title_1">A Bonus on Every Purchase</string>
+  <string name="bonus_page_body_1">Look for the games identified with %1$s, install the AppCoins Wallet and get up to %2$s%% bonus in all purchases. You can then use this bonus to make your next purchases in your favorite games!</string>
+  <string name="bonus_page_title_2">Want More?</string>
+  <string name="bonus_page_body_2">You can get an extra %s%% bonus by using an Aptoide Games exclusive promo code in specific games. Stay tuned and you\'ll be notified!</string>
 </resources>
